--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 airflow/airflow-webserver.pid
 airflow/unittests.cfg
-dbt/.user.yml
-dbt/data/order_products__prior.csv.zip
+airflow/dags/__pycache__
 *.pyc
-sample_data/order_products__prior.csv.zip
-.gitkeep
+.env
