--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,74 +1,78 @@
-version: '3'
+---
+version: '3.4'
+
+x-common:
+  &common
+  user: "${AIRFLOW_UID}:0"
+  env_file: 
+    - .env
+  volumes:
+    - ./airflow/dags:/opt/airflow/dags
+    - ./sample_data:/tmp/sample_data
+    - ./oly_dbt:/opt/dbt/oly_dbt
+    - ./logs:/opt/airflow/logs
+    - ./plugins:/opt/airflow/plugins
+    - /var/run/docker.sock:/var/run/docker.sock
+
+x-depends-on:
+  &depends-on
+  depends_on:
+    postgres:
+      condition: service_healthy
+    airflow-init:
+      condition: service_completed_successfully
+
 services:
-  postgres-airflow:
-    image: postgres
-    environment:
-      POSTGRES_PASSWORD: pssd
-      POSTGRES_USER : airflowuser
-      POSTGRES_DB : airflowdb
-      
-      AIRFLOW_SCHEMA: airflow
-    expose:
-      - 5432
-    restart: always
-    volumes:
-      - ./scripts_postgres:/docker-entrypoint-initdb.d
-      # - ./sample_data:/sample_data
-
-  postgres-dbt:
-    image: postgres
-    environment:
-      POSTGRES_PASSWORD: pssd
-      POSTGRES_USER : dbtuser
-      POSTGRES_DB : dbtdb
-      DBT_SCHEMA: dbt
-      DBT_RAW_DATA_SCHEMA: dbt_raw_data
-    expose:
-      - 5432
-    restart: always
-    volumes:
-      - ./sample_data:/sample_data
-
-  airflow:
-    build: .
-    restart: always
-    environment: 
-      DBT_PROFILES_DIR: /dbt
-      AIRFLOW_HOME: /airflow
-      AIRFLOW__CORE__DAGS_FOLDER: /airflow/dags
-      AIRFLOW__CORE__PARALLELISM: 4
-      AIRFLOW__CORE__DAG_CONCURRENCY: 4
-      AIRFLOW__CORE__MAX_ACTIVE_RUNS_PER_DAG: 4
-      # AIRFLOW__ADMIN__HIDE_SENSITIVE_VARIABLE_FIELDS: False
-      # Postgres details need to match with the values defined in the postgres-airflow service
-      POSTGRES_USER: airflowuser
-      POSTGRES_PASSWORD: pssd
-      POSTGRES_HOST: postgres-airflow
-      POSTGRES_PORT: 5432
-      POSTGRES_DB: airflowdb
-      # postgres-dbt connection details. Required for the inital loading of seed data
-      # Credentials need to match with service postgres-dbt
-      DBT_POSTGRES_PASSWORD: pssd
-      DBT_POSTGRES_USER : dbtuser
-      DBT_POSTGRES_DB : dbtdb
-      DBT_DBT_SCHEMA: dbt
-      DBT_DBT_RAW_DATA_SCHEMA: dbt_raw_data
-      DBT_POSTGRES_HOST: postgres-dbt
-    depends_on:
-      - postgres-airflow
-      - postgres-dbt
+  postgres:
+    image: postgres:9.6
+    container_name: postgres
     ports:
-      - 8000:8080
+      - "5434:5432"
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "airflow"]
+      interval: 5s
+      retries: 5
+    env_file:
+      - .env
     volumes:
-      - ./dbt:/dbt
-      - ./airflow:/airflow
+      - ./sample_data:/tmp/sample_data
 
-  adminer:
-    image: adminer
-    restart: always
+  scheduler:
+    <<: *common
+    <<: *depends-on
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    container_name: airflow-scheduler
+    #command: scheduler
+    restart: on-failure
     ports:
-      - 8080:8080
-    depends_on:
-      - postgres-airflow
-      - postgres-dbt
+      - "8793:8793"
+      - "8282:8080"
 
+  webserver:
+    <<: *common
+    <<: *depends-on
+    image: apache/airflow:2.3.0
+    container_name: airflow-webserver
+    restart: always
+    command: webserver
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 30s
+      retries: 5
+  
+  airflow-init:
+    <<: *common
+    image: apache/airflow:2.3.0
+    container_name: airflow-init
+    entrypoint: /bin/bash
+    command:
+      - -c
+      - |
+        mkdir -p /sources/logs /sources/dags /sources/plugins
+        chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
+        exec /entrypoint airflow version
