added dbt-expectations simple primary_key test on raw tables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - .env
     volumes:
       - ./sample_data:/tmp/sample_data
+      - ./create_schema.sql:/docker-entrypoint-initdb.d/create_schema.sql
 
   scheduler:
     <<: *common
